[package]
name = "weather-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde = "1.0.166"
serde_json = "1.0.100"
tui = "0.19"
crossterm = "0.25"
tokio = { version = "1.29.1", features = ["full"] }
tui-tree-widget = "0.12.0"
